# PrevacCompetitionServer

./: .gitignore  PrevacCompetition.sln  README.md
PrevacCompetition/: CMakeLists.txt  modbus.aps
PrevacCompetition/rasberyPi/: App.cpp  App.h  Conversion.cpp  Conversion.h  ConveyorBelt.cpp  ConveyorBelt.h  FileOperation.cpp  FileOperation.h  Piece.cpp  Piece.h  RSP.h  Token.h  connect.cpp  connect.h  control.h  input.h  main.cpp
